--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body{
 }
 
 body {
-  background: url("../bg.png");
+  background: url("bg.png");
   text-align: center;
   font: 12px sans-serif;
 }
@@ -18,6 +18,43 @@ body {
 .maple-window {
   margin: 5px;
   vertical-align: top;
+	display: inline-block;
+	border-width: 35px 20px 20px 20px;
+	border-style: solid;
+	border-image: url("mac-frame.png") 30 40 22 22 fill repeat;
+	border-image-width: 30px 40px 22px 22px;
+	color: #000;
+	position: relative;
+	text-align: left;
+	font-size: 12px;
+	font-family: geneva, sans-serif;
+	min-width: 200px;
+}
+
+.maple-window a {
+  color: #9999cc;
+  text-shadow: none;
+}
+.maple-window a:hover {
+  color: #ccccff;
+}
+
+.maple-window-title {
+  position: absolute;
+  top: -31px;
+  text-align: center;
+  width: 100%;
+  left: 0;
+}
+
+.maple-window-title > span {
+  background: #ccc;
+  padding: 1px 5px 1px 5px;
+  font-size: 12px;
+  font-family: chicago, sans-serif;
+  vertical-align: middle;
+  margin-right: 20px;
+  white-space: nowrap;
 }
 
 /*#camera {
