--- a/style.css
+++ b/style.css
@@ -50,7 +50,8 @@ body {
 .maple-window-title > span {
   background: #ccc;
   padding: 1px 5px 1px 5px;
-  font-size: 12px;
+	font-size: 12px;
+	font-weight: bold;
   font-family: chicago, sans-serif;
   vertical-align: middle;
   margin-right: 20px;
