add web3 support

--- a/style.css
+++ b/style.css
@@ -117,3 +117,20 @@ body {
 #gif-buttons {
 	margin: .5em;
 }
+
+.blink {
+	color: #f00;
+	text-align: center;
+	animation: blink-animation 1s steps(5, start) infinite;
+	-webkit-animation: blink-animation 1s steps(5, start) infinite;
+}
+@keyframes blink-animation {
+	to {
+		visibility: hidden;
+	}
+}
+@-webkit-keyframes blink-animation {
+	to {
+		visibility: hidden;
+	}
+}
